--- a/src/components/util/projects.json
+++ b/src/components/util/projects.json
@@ -3,36 +3,36 @@
         "title": "Site d'avis de restaurants",
         "technos": "React, Bootstrap, Axios",
         "url": "",
-        "image": ""
+        "image": "/abstract.jpg"
     },
     {
         "title": "Site d'avis de films",
         "technos": "React, Bootstrap, Axios",
         "url": "",
-        "image": ""
+        "image": "/abstract.jpg"
     },
     {
         "title": "Jeu de plateau en tour par tour",
         "technos": "ES6, Canvas, Jquery",
         "url": "",
-        "image": ""
+        "image": "/abstract.jpg"
     },
     {
         "title": "Générateur de citations",
         "technos": "ES6, Html5, Css3",
         "url": "",
-        "image": ""
+        "image": "/abstract.jpg"
     },
     {
         "title": "Restauration en ligne",
         "technos": "UML, MySQL",
         "url": "",
-        "image": ""
+        "image": "/abstract.jpg"
     },
     {
         "title": "Agence immobilière de luxe",
         "technos": "Wordpress",
         "url": "",
-        "image": ""
+        "image": "/abstract.jpg"
     }
 ]
