--- a/src/components/util/projects.json
+++ b/src/components/util/projects.json
@@ -33,6 +33,6 @@
         "title": "Agence immobilière de luxe",
         "technos": "Wordpress",
         "url": "",
-        "image": "/abstract.jpg"
+        "image": "/chalets.png"
     }
 ]
