layout bootstrap corrections

--- a/src/components/util/projects.json
+++ b/src/components/util/projects.json
@@ -8,31 +8,31 @@
     {
         "title": "Site d'avis de films",
         "technos": "React, Bootstrap, Axios",
-        "url": "",
+        "url": "#",
         "image": "/abstract.jpg"
     },
     {
         "title": "Jeu de plateau en tour par tour",
         "technos": "ES6, Canvas, Jquery",
-        "url": "",
+        "url": "#",
         "image": "/abstract.jpg"
     },
     {
         "title": "Générateur de citations",
         "technos": "ES6, Html5, Css3",
-        "url": "",
+        "url": "#",
         "image": "/abstract.jpg"
     },
     {
         "title": "Restauration en ligne",
         "technos": "UML, MySQL",
-        "url": "",
+        "url": "#",
         "image": "/abstract.jpg"
     },
     {
         "title": "Agence immobilière de luxe",
         "technos": "Wordpress",
-        "url": "",
+        "url": "http://chaletsetcaviar-courchevel.org/",
         "image": "/chalets.png"
     }
 ]
