--- a/src/components/util/projects.json
+++ b/src/components/util/projects.json
@@ -2,37 +2,49 @@
     {
         "title": "Site d'avis de restaurants",
         "technos": "React, Bootstrap, Axios",
-        "url": "",
-        "image": "/abstract.jpg"
+        "url": "https://github.com/LieChou/projet_7",
+        "image": "/restaurant.jpg"
     },
     {
         "title": "Site d'avis de films",
         "technos": "React, Bootstrap, Axios",
-        "url": "#",
-        "image": "/abstract.jpg"
+        "url": "https://github.com/LieChou/movieList",
+        "image": "/movies.jpg"
     },
     {
         "title": "Jeu de plateau en tour par tour",
         "technos": "ES6, Canvas, Jquery",
-        "url": "#",
-        "image": "/abstract.jpg"
+        "url": "https://github.com/LieChou/projet_6",
+        "image": "/game.jpg"
     },
     {
-        "title": "Générateur de citations",
-        "technos": "ES6, Html5, Css3",
-        "url": "#",
-        "image": "/abstract.jpg"
+        "title": "Festival de films en plein air",
+        "technos": "Html5, Css3, Bootstrap",
+        "url": "http://festivalpleinair-monceau.org/",
+        "image": "/Festival.jpg"
     },
     {
         "title": "Restauration en ligne",
         "technos": "UML, MySQL",
-        "url": "#",
-        "image": "/abstract.jpg"
+        "url": "https://github.com/LieChou/expressFood",
+        "image": "/expressFood.jpg"
     },
     {
         "title": "Agence immobilière de luxe",
         "technos": "Wordpress",
         "url": "http://chaletsetcaviar-courchevel.org/",
-        "image": "/chalets.png"
+        "image": "/chalets.jpg"
+    },
+    {
+        "title": "Générateur de citations",
+        "technos": "ES6",
+        "url": "https://github.com/LieChou/P5_0C",
+        "image": "/quotes.jpg"
+    },
+    {
+        "title": "Refonte d'un projet existant",
+        "technos": "Jasmine, JS",
+        "url": "https://github.com/LieChou/projet_8",
+        "image": "/refonte.jpg"
     }
 ]
